- Fixed bug #47430 (Errors after writing to nodeValue parameter of an absent 
  previousSibling). (Rob)
- Fixed bug #47254 (Wrong Reflection for extends class). (Felipe)
- Fixed bug #46882 (Serialize / Unserialize misbehaviour under OS with
  different bit numbers). (Matt)
- Fixed bug #45997 (safe_mode bypass with exec/system/passthru (windows only)).
  (Pierre)
- Fixed bug #45822 (Near infinite-loops while parsing huge relative offsets).
  (Derick, Mike Sullivan)
- Fixed bug #45799 (imagepng() crashes on empty image). (Martin McNickle,
  Takeshi Abe)
- Fixed bug #45191 (error_log ignores date.timezone php.ini val when
  setting logging timestamps). (Derick)
- Fixed bug #45092 (header HTTP context option not being used when compiled
  using --with-curlwrappers). (Jani)
- Fixed bug #44996 (xmlrpc_decode() ignores time zone on iso8601.datetime).
  (Ilia, kawai at apache dot org) 
- Fixed bug #43073 (TrueType bounding box is wrong for angle<>0).
  (Martin McNickle)
- Fixed bug #38805 (PDO truncates text from SQL Server text data type
  field). (Steph)

26 Feb 2009, PHP 5.2.9
- Changed __call() to be invoked on private/protected method access, similar to
  properties and __get(). (Andrei)

- Added optional sorting type flag parameter to array_unique(). Default is
  SORT_REGULAR. (Andrei)

- Fixed a crash on extract in zip when files or directories entry names contain 
  a relative path. (Pierre)
- Fixed error conditions handling in stream_filter_append(). (Arnaud)
- Fixed zip filename property read. (Pierre)
- Fixed explode() behavior with empty string to respect negative limit. (Shire)
- Fixed security issue in imagerotate(), background colour isn't validated
  correctly with a non truecolour image. Reported by Hamid Ebadi,
  APA Laboratory (Fixes CVE-2008-5498). (Scott)
- Fixed a segfault when malformed string is passed to json_decode(). (Scott)
- Fixed bug in xml_error_string() which resulted in messages being
  off by one. (Scott)
